# kinova_gen3_pik_examples

./: CMakeLists.txt  Dockerfile  README.md  first_run.sh  package.xml
.ci/: ci_install_dependencies.sh  ci_run_tests.sh  ci_test_build.sh
.github/workflows/: noetic.yml
include/: RvizVisualization.hpp
launch/: pik_examples.launch  spawn_kortex_robot.launch  spawn_kortex_robot_spraying.launch  spraying_pik_examples.launch
rviz/: pik_examples.rviz  spraying_pik_examples.rviz
src/: RvizVisualization.cpp  pik_examples.cpp  spraying_pik_examples.cpp
tests/: pik_example_1_test.cpp  pik_example_2_test.cpp  pik_example_3_test.cpp  pik_example_4_test.cpp
urdf/: gen3_spraying.xacro  kortex_robot_spraying.xacro
urdf/meshes/: spraying_stick.dae
