<?xml version="1.0"?>
<package format="2">
  <name>kinova_gen3_pik_examples</name>
  <version>0.0.0</version>
  <description>Kinova Gen3 Prioritized Inverse Kinematics ROS Examples</description>

  <author email="ivo.vatavuk@fer.hr">Ivo Vatavuk</author>
  <maintainer email="ivo.vatavuk@fer.hr" />

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pik_ros</build_depend>

  <exec_depend>pik_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
